--- a/01 - Hello World/index.html
+++ b/01 - Hello World/index.html
@@ -14,16 +14,45 @@
 <body>
 
   <!-- plain javascript -->
-  <section class="section container">
-  </section>
+  <!-- <section class="section container">
+    <h1 class="title">My Text Goes Here!</h1>
+
+    <input type="text" class="input">
+  </section> -->
 
   <!-- vue -->
-  <section class="section container">
+  <section id="app" class="section container">
+    <h1 class="title">
+     Hi my name is {{ name }} and my message is: {{ message }}
+    </h1>
+
+    <input type="text" class="input" v-model="name">
+    <input type="text" class="input" v-model="message">
   </section>
 
   <!-- our javascript -->
   <script>
-    
+    // plain javascript ============================================
+    // const heading = document.querySelector('h1');
+    // const input = document.querySelector('input');
+
+    // // listen to the input box for typing
+    // input.addEventListener('keyup', (e) => {
+    //   const text = e.target.value;
+    //   heading.innerText = text;
+    // });
+
+      // jquery ====================================================
+//      $('input').on('keyup', (e) => $('h1').text(e.target.value));
+
+    // with vue ====================================================
+    const app = new Vue({
+      el: '#app',
+      data: {
+        name: 'Raph',
+        message: 'hello world'
+      }
+    });
   </script>
 </body>
 </html>
