--- a/05 - Styles and CSS/index.html
+++ b/05 - Styles and CSS/index.html
@@ -16,28 +16,108 @@
 
     <!-- Inline Classes ========================================= -->
     <h2 class="title">Inline Classes</h2>
+    <div class="notification" v-bind:class="{ 'is-success': isSuccessful, 'is-size-1': isLarge }">
+      I am a notification!
+    </div>
+
+    <a class="button is-info" v-on:click="celebrate">We dit it!</a>
 
     <!-- Object Classes ========================================= -->
     <h2 class="title">Object Classes</h2>
+    <div class="notification" v-bind:class="notificationStyles">
+      I am a notification!
+    </div>
+
 
     <!-- Array Classes ========================================= -->
     <h2 class="title">Array Classes</h2>
+    <div class="field">
+      <div class="control">
+        <label class="radio">
+          <input type="radio" value="is-info" v-model="color"> Info
+        </label>
+        <label class="radio">
+          <input type="radio" value="is-danger" v-model="color"> Danger
+        </label>
+        <label class="radio">
+          <input type="radio" value="is-warning" v-model="color"> Warning
+        </label>
+      </div>
+    </div>
+
+    <div class="field">
+      <div class="control">
+        <label class="radio">
+          <input type="radio" value="is-small" v-model="size"> Small
+        </label>
+        <label class="radio">
+          <input type="radio" value="is-medium" v-model="size"> Medium
+        </label>
+        <label class="radio">
+          <input type="radio" value="is-large" v-model="size"> Large
+        </label>
+      </div>
+    </div>
+
+    <button type="button" class="button" v-bind:class="[color, size]">
+      My Button
+    </button>
 
     <!-- ================================================== -->
     <hr>
 
     <!-- Inline Styles ========================================= -->
     <h2 class="title">Inline Styles</h2>
+    <div class="notification" v-bind:style="{ color: myColor, fontSize: mySize, backgroundColor: myBgColor }">
+      I am a notification!
+    </div>
 
     <!-- Object Styles ========================================= -->
     <h2 class="title">Object Styles</h2>
+    <div class="message">
+      <div class="message-body" :style="myMessageStyles">
+        I am a message!
+      </div>
+    </div>
 
   </section>
 
   <!-- our javascript -->
   <script>
     const app = new Vue({
-      el: '#app'
+      el: '#app',
+      data: {
+        // inline classes
+        isSuccessful: false,
+        isLarge: false,
+
+        // object classes
+        notificationStyles: {
+          'is-success': true,
+          'is-size-1': true
+        },
+
+        // array classes
+        color: '',
+        size: '',
+
+        // for styles
+        myColor: 'red',
+        mySize: '20px',
+        myBgColor: '#AAA',
+
+        myMessageStyles: {
+          color: 'red',
+          fontSize: '20px',
+          backgroundColor: '#AAA',
+        }
+      },
+      methods: {
+        celebrate: function() {
+          this.isSuccessful = true;
+          this.isLarge = true;
+        }
+      }
     });
   </script>
 </body>
