Completed Vue Events Exercise

--- a/07 - Handling Events (Accordion)/index.html
+++ b/07 - Handling Events (Accordion)/index.html
@@ -12,13 +12,16 @@
       margin-left: auto;
       margin-right: auto;
     }
+    .message-header {
+      cursor: pointer;
+    }
     .message-body   {
       padding: 0;
       max-height: 10em;
       overflow: hidden;
       transition: 0.3s ease all;
     }
-    .closed .message-body {
+    .is-closed .message-body {
       max-height: 0;
     }
     .message-content {
@@ -32,13 +35,43 @@
 <body>
   <!-- our template -->
   <section id="app" class="section container">
-    
+
+    <article class="message" :class="accordionClasses">
+      <div class="message-header" @click="toggleAccordion">
+        <p>Hello World</p>
+        <button class="delete" aria-label="delete"></button>
+      </div>
+      <div class="message-body">
+        <div class="message-content">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+          <strong>Pellentesque risus mi</strong>
+        </div>
+      </div>
+    </article>
+
   </section>
 
   <!-- our javascript -->
   <script>
     const app = new Vue({
-      el: '#app'
+      el: '#app',
+      data: {
+        isOpen: true,
+      },
+      methods: {
+        toggleAccordion: function() {
+          this.isOpen = !this.isOpen;
+        },
+      },
+      computed: {
+          accordionClasses: function() {
+          return {
+            'is-closed': !this.isOpen,
+            'is-primary': this.isOpen,
+            'is-dark': !this.isOpen
+        };
+        }
+      }
     });
   </script>
 </body>
