--- a/09 - Lifecycle Events/index.html
+++ b/09 - Lifecycle Events/index.html
@@ -13,14 +13,36 @@
 <body>
   <!-- our template -->
   <section id="app" class="section container">
+    {{ count }}
 
+    <a class="button is-info" @click="incrementCount">Update</a>
   </section>
 
   <!-- our javascript -->
   <script>
-    const app = new Vue({
 
+    const app = new Vue({
+      el: '#app',
+      data: {
+        count: 0
+      },
+      methods: {
+        incrementCount: function() {
+          this.count += 1;
+        }
+
+      },
+
+      created: function() {
+        this.incrementCount();
+      },
+
+      updated: function() {
+        alert('updated');
+      }
+      
     });
+
   </script>
 </body>
 </html>
