--- a/13 - Components (Gif Box)/index.html
+++ b/13 - Components (Gif Box)/index.html
@@ -42,18 +42,7 @@
 
     <div class="columns is-multiline" v-if="searchedGifs">
       <div class="column is-one-quarter" v-for="gif in searchedGifs">
-        <div class="gif-box">
-          <a :href="gif.url">
-            <img class="gif-image" :src="gif.images.original.url">
-          </a>
-          <a 
-            class="gif-user" 
-            v-if="gif.user" 
-            :href="gif.user.profile_url">
-              <img :src="gif.user.avatar_url" height="40" width="40">
-              {{ gif.user.display_name }}
-          </a>
-        </div>
+        <gif-box :gif="gif"></gif-box>
       </div>
     </div>
 
@@ -61,18 +50,7 @@
     <h2 class="title">Trending</h2>
     <div class="columns is-multiline" v-if="trendingGifs">
       <div class="column is-one-quarter" v-for="gif in trendingGifs">
-        <div class="gif-box">
-          <a :href="gif.url">
-            <img class="gif-image" :src="gif.images.original.url">
-          </a>
-          <a 
-            class="gif-user" 
-            v-if="gif.user" 
-            :href="gif.user.profile_url">
-              <img :src="gif.user.avatar_url" height="40" width="40">
-              {{ gif.user.display_name }}
-          </a>
-        </div>
+        <gif-box :gif="gif"></gif-box>
       </div>
     </div>
 
@@ -80,6 +58,25 @@
 
   <!-- our javascript -->
   <script>
+
+    Vue.component('gif-box', {
+      props: ['gif'],
+      template: `
+      <div class="gif-box">
+          <a :href="gif.url">
+            <img class="gif-image" :src="gif.images.original.url">
+          </a>
+          <a 
+            class="gif-user" 
+            v-if="gif.user" 
+            :href="gif.user.profile_url">
+              <img :src="gif.user.avatar_url" height="35" width="35">
+              {{ gif.user.display_name }}
+          </a>
+        </div>
+      `
+    });
+
     const app = new Vue({
       el: '#app',
 
